--- a/assets/css/mellis.css
+++ b/assets/css/mellis.css
@@ -21,18 +21,18 @@
   --mellis-font: 'Manrope', sans-serif;
   --mellis-font-two: 'Libre Baskerville', serif;
   --mellis-font-three: 'Parisienne', cursive;
-  --mellis-white: #ffffff;
-  --mellis-white-rgb: 255, 255, 255;
-  --mellis-base: #de968d;
-  --mellis-base-rgb: 222, 150, 141;
-  --mellis-black: #27252a;
-  --mellis-black-rgb: 39, 37, 42;
-  --mellis-extra: #fcf5f5;
-  --mellis-extra-rgb: 252, 245, 245;
-  --mellis-gray: #89868d;
-  --mellis-gray-rgb: 137, 134, 141;
-  --mellis-bdr-color: #f0e8e8;
-  --mellis-bdr-color-rgb: 240, 232, 232;
+  --mellis-white: #fdfaf6;
+--mellis-white-rgb: 253, 250, 246;
+--mellis-base: #8b5e3c;
+--mellis-base-rgb: 139, 94, 60;
+--mellis-black: #2e2b28;
+--mellis-black-rgb: 46, 43, 40;
+--mellis-extra: #f5eee6;
+--mellis-extra-rgb: 245, 238, 230;
+--mellis-gray: #a89f97;
+--mellis-gray-rgb: 168, 159, 151;
+--mellis-bdr-color: #e2d6ca;
+--mellis-bdr-color-rgb: 226, 214, 202;
   --mellis-letter-spacing: 0.1em
 }
 
