--- a/assets/css/mellis.css
+++ b/assets/css/mellis.css
@@ -3477,7 +3477,7 @@ ul {
 .google-map {
   position: relative;
   display: block;
-  padding: 120px 0 0;
+  padding: 120px 0;
 }
 
 .google-map__inner {
@@ -3493,7 +3493,7 @@ ul {
   height: 550px;
   width: 100%;
   background-color: var(--mellis-extra);
-  mix-blend-mode: luminosity;
+  mix-blend-mode: multiply;
 }
 
 .google-map__opening-hours {
