--- a/assets/css/mellis.css
+++ b/assets/css/mellis.css
@@ -1452,6 +1452,7 @@ ul {
 .mobile-nav__container {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 18px;
 }
 
 .mobile-nav__social {
@@ -1949,7 +1950,7 @@ ul {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(var(--mellis-black-rgb), .60);
+  background-color: rgba(var(--mellis-black-rgb), .30);
   z-index: -1;
 }
 
