--- a/assets/css/mellis.css
+++ b/assets/css/mellis.css
@@ -17,6 +17,10 @@
 /*--------------------------------------------------------------
 # Common
 --------------------------------------------------------------*/
+html {
+  scroll-behavior: smooth;
+}
+
 .whatsapp-float {
   position: fixed;
   width: 60px;
