mellis remove fully

--- a/assets/css/asuna-responsive.css
+++ b/assets/css/asuna-responsive.css
@@ -1100,11 +1100,11 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .main-menu-two .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 
     .main-menu-three .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 }
 
@@ -1116,12 +1116,12 @@
     }
 
     .main-menu-two .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 
 
     .main-menu-three .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 }
 
@@ -1157,13 +1157,13 @@
     }
 
     .main-menu-two .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 
 
 
     .main-menu-three .mobile-nav__toggler:hover {
-        color: var(--mellis-white);
+        color: var(--asuna-white);
     }
 
     .main-menu-three .mobile-nav__toggler {
