new logo update

--- a/assets/css/asuna.css
+++ b/assets/css/asuna.css
@@ -539,7 +539,7 @@ ul {
   animation-duration: 2s;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  background-image: url(../images/loader.svg);
+  background-image: url(../images/My-images/nav-logo.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 60px auto;
