--- a/assets/css/asuna.css
+++ b/assets/css/asuna.css
@@ -239,7 +239,8 @@ ul {
 }
 
 .list-unstyled {
-  padding-left: 0;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 @media (min-width: 1200px) {
@@ -4589,7 +4590,8 @@ ul {
 .services-two__title {
   font-size: 30px;
   line-height: 40px;
-  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
 .services-two__list {
